# AI-voice-Agent

./: .env.example  .gitignore  OPERATION_TURING_ADJUSTER_v2.md  README.md  pyproject.toml  requirements.txt
agent/: __init__.py  brain.py  claim_state.py  gemini_client.py  intent.py  pii_redact.py  prompts.py
bridge/: server.py
dashboard/: index.html
data/crm/: max_mueller.json
data/synthetic/: fnol_train.jsonl
docs/: CRITICAL_PATH.md  ENTIRE.md  GRADIUM.md  PIONEER.md  SECURITY.md  SEQUENTIAL_RUNBOOK.md  TAVILY.md
docs/aikido-screenshots/: README.md
docs/entire-dispatches/: 2026-04-26.md  README.md
docs/pitch/: index.html  notes.md
docs/reference/: furtherIdea_Overall Strategy and Philosophy.txt
extraction/: benchmark.py  benchmark_results.json  finetune_gliner.py  gemini_extractor.py  gliner2_service.py  synthetic_data.py
fillers/: generate_fillers.py  manifest.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.module.css  index.css
frontend/src/components/: ClaimProgress.jsx  ClaimProgress.module.css  FraudGauge.jsx  FraudGauge.module.css  JamieAvatar.jsx  Transcript.jsx  (+2 more)
scripts/: clone_voice.py  diagnose_gemini.py  eval_jamie.py  run_demo_auto.py  run_demo_text.py  setup_entire.sh  setup_pronunciations.py  verify_keys.py
telephony/: README.md  configure_twilio.py  diagnose_twilio.py  setup_sip.py  twilio_client.py
tests/: juror_bot.py  test_extraction.py  test_smoke.py
tools/: tavily_lookup.py
voice/: __init__.py  gradbot_quickstart.py  livekit_agent.py  multiplex_demo.py
(+1 files in other folders)
